k8s/namespace.yaml
apiVersion: v1
kind: Namespace
meta
  name: arxiv-cosci
  labels:
    name: arxiv-cosci
    environment: production
